[package]
name = "pb-arena"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE.txt"
description = "Yet another arena allocator for graph based operations"
keywords = ["arena", "tree", "graph"]
categories = ["memory-management"]
homepage = "https://github.com/gpabois/rs-pb-arena"
[dependencies]
pb-atomic-linked-list = "0.1.0"
